--- a/HW1123/HW1123Q06.md
+++ b/HW1123/HW1123Q06.md
@@ -1,4 +1,58 @@
 # CH09.04_Q01-03 #
-學分班 徐偉峻
+021 學分班 徐偉峻
 
+State the null and alternative hypotheses; 陳述虛無假設和對立假設
+
+calculate the appropriate test statistic; 計算出適當的檢定統計量
+
+provide an $\alpha$ = .05 rejection region; 顯著水準 (significance level) $\alpha$ = .05 的拒絕域
+
+and state your conclusions. 陳述結論
+
+1. A random sample of n = 1000 from a binomial population contained 279 successes.
+You wish to show that p < .3.
+
+二項式分布中隨機抽樣且樣本大小為 n = 1000，樣本中的成功次數為 279 次，檢驗比例 p 是否小於 0.3
+
+$\hat{p} = \frac{297}{1000} = 0.297$
+
+a. $H_0 : p = 0.3$ vs $$H_a$$ : p < 0.3 Left-Sided Test(左尾檢定) 
+
+b. $\alpha$ = 0.05, Z = -1.645 (查表得知), RR = {Z < -1.645}
+
+c. The test statstic is $Z_{\text{STAT}} = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} = \frac{0.279 - 0.3}{\sqrt{\frac{0.3 \cdot 0.7}{1000}}} = -1.449$     
+
+因為Z的統計檢定量未落在Rejection Region，所以不拒絕虛無假設 $H_{0}$，無直接證據證明 p < .3 。   
+
+
+2. A random sample of n = 1400 observations from a binomial population produced x = 529 successes.
+You wish to show that p differs from .4.
+
+二項式分布中隨機抽樣且樣本大小為 n = 1400，樣本中的成功次數為 529 次，檢驗比例 p 是否不等於 0.4
+
+$\hat{p} = \frac{529}{1400} = 0.3779$
+
+a. $H_0 : p = 0.4$ vs $H_a$ : p $\ne$ 0.4 Two-Sided Test(雙尾檢定)
+
+b. $\frac{\alpha}{2}$ = 0.025, Z = 1.96 (查表得知), RR = {Z < -1.96, Z > 1.96}
+
+c. The test statstic is $Z_{\text{STAT}} = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} = \frac{0.3779 - 0.4}{\sqrt{\frac{0.4 \cdot 0.6}{1400}}} = -1.688$ 
+
+因為Z的統計檢定量未落在Rejection Region，所以不拒絕虛無假設 $H_{0}$，無直接證據證明 p $\ne$ 0.4 。  
+
+
+3. Seventy-two successes were observed in a random sample of n = 120 observations from a binomial population.
+You wish to show that p > .5.
+
+二項式分布中隨機抽樣且樣本大小為 n = 120，樣本中的成功次數為 72 次，檢驗比例 p 是否大於 0.5
+
+$\hat{p} = \frac{72}{120} = 0.6$
+
+a. $H_0 : p = 0.5$ vs $H_a$ : p > 0.5 Two-Sided Test (右尾檢定)
+
+b. Set $\alpha $ = 0.05  Z = 1.645 (查表得知) 
+
+c. The test statstic is $Z_{\text{STAT}} = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} = \frac{0.6 - 0.5}{\sqrt{\frac{0.5 \cdot 0.5}{120}}} = 2.191$     
+
+因為Z的統計檢定量未落在Rejection Region，所以拒絕虛無假設 $H_{0}$，有直接證據證明 p > .5 。 
 
