--- a/HW1123/12_譚玥湄/CH09.04_Q10.md
+++ b/HW1123/12_譚玥湄/CH09.04_Q10.md
@@ -3,3 +3,38 @@ CH09.04_Q10
 seeds from this cross were collected and germinated, and 58 plants had red petals.  
 a. What hypothesis should you use to test the geneticist’s claim?  
 b. Calculate the test statistic and its p-value. Use the p-value to evaluate the statistical significance of the results at the 1% level.  
+
+---
+We will perform a hypothesis test to evaluate the geneticist's claim that 75% of the offspring from the cross will have red flowers. Here's the detailed solution:
+________________________________________
+a. Hypotheses
+•	Null hypothesis (H0H_0H0): The proportion of offspring with red flowers is p=0.75p = 0.75p=0.75, as claimed by the geneticist.
+H0:p=0.75H_0: p = 0.75H0:p=0.75
+•	Alternative hypothesis (HaH_aHa): The proportion of offspring with red flowers is different from 0.75.
+Ha:p≠0.75H_a: p \neq 0.75Ha:p=0.75
+This is a two-tailed test.
+________________________________________
+b. Test Statistic and P-value
+Step 1: Calculate sample proportion
+p^=xn=58100=0.58\hat{p} = \frac{x}{n} = \frac{58}{100} = 0.58p^=nx=10058=0.58
+Step 2: Calculate test statistic
+The test statistic for a proportion is:
+z=p^−p0p0(1−p0)nz = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0(1 - p_0)}{n}}}z=np0(1−p0)p^−p0
+Where:
+•	p^=0.58\hat{p} = 0.58p^=0.58,
+•	p0=0.75p_0 = 0.75p0=0.75,
+•	n=100n = 100n=100.
+Substitute the values:
+z=0.58−0.750.75(1−0.75)100=−0.170.1875100=−0.170.0433≈−3.92z = \frac{0.58 - 0.75}{\sqrt{\frac{0.75(1 - 0.75)}{100}}} = \frac{-0.17}{\sqrt{\frac{0.1875}{100}}} = \frac{-0.17}{0.0433} \approx -3.92z=1000.75(1−0.75)0.58−0.75=1000.1875−0.17=0.0433−0.17≈−3.92
+Step 3: Calculate the p-value
+For a two-tailed test, the p-value is:
+p-value=2⋅P(Z<−3.92)\text{p-value} = 2 \cdot P(Z < -3.92)p-value=2⋅P(Z<−3.92)
+Using a standard normal table or calculator, P(Z<−3.92)P(Z < -3.92)P(Z<−3.92) is approximately 0.000044.
+Thus:
+p-value=2⋅0.000044=0.000088\text{p-value} = 2 \cdot 0.000044 = 0.000088p-value=2⋅0.000044=0.000088
+Step 4: Compare p-value with significance level (α=0.01\alpha = 0.01α=0.01)
+The p-value (0.0000880.0000880.000088) is much smaller than the significance level (0.010.010.01).
+________________________________________
+Conclusion
+Since the p-value is less than 0.010.010.01, we reject the null hypothesis (H0H_0H0) at the 1% significance level. This means the data provide strong evidence to refute the geneticist's claim that 75% of the offspring have red flowers.
+
