--- a/HW1123/12_譚玥湄/CH09.04_Q08.md
+++ b/HW1123/12_譚玥湄/CH09.04_Q08.md
@@ -4,3 +4,44 @@ a. Use a formal test of hypothesis with $$\alpha$$ = .05 to determine  whether m
 b. Use the p-value approach. Do the two approaches  lead to the same conclusion?  
 
 ---
+To determine whether more than 50% of Americans would not ride in a driverless car, we will perform a hypothesis test. Here's the detailed solution:
+________________________________________
+a. Hypothesis Test Using α=0.05\alpha = 0.05α=0.05
+Step 1: State the hypotheses
+•	Null hypothesis (H0H_0H0): The proportion of Americans who would not ride in a driverless car is 50% (p=0.50p = 0.50p=0.50).
+•	Alternative hypothesis (HaH_aHa): More than 50% of Americans would not ride in a driverless car (p>0.50p > 0.50p>0.50).
+This is a one-tailed test.
+________________________________________
+Step 2: Define the sample statistics
+•	Sample size: n=500n = 500n=500,
+•	Sample proportion: p^=xn=0.56⋅500500=0.56\hat{p} = \frac{x}{n} = \frac{0.56 \cdot 500}{500} = 0.56p^=nx=5000.56⋅500=0.56,
+•	Null hypothesis proportion: p0=0.50p_0 = 0.50p0=0.50.
+________________________________________
+Step 3: Calculate the test statistic
+The test statistic for a proportion is:
+z=p^−p0p0(1−p0)nz = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0 (1 - p_0)}{n}}}z=np0(1−p0)p^−p0
+Substitute the values:
+z=0.56−0.500.50⋅(1−0.50)500=0.060.25500=0.060.0005=0.060.02236≈2.68z = \frac{0.56 - 0.50}{\sqrt{\frac{0.50 \cdot (1 - 0.50)}{500}}} = \frac{0.06}{\sqrt{\frac{0.25}{500}}} = \frac{0.06}{\sqrt{0.0005}} = \frac{0.06}{0.02236} \approx 2.68z=5000.50⋅(1−0.50)0.56−0.50=5000.250.06=0.00050.06=0.022360.06≈2.68
+________________________________________
+Step 4: Determine the rejection region
+At α=0.05\alpha = 0.05α=0.05, the critical value for a one-tailed test is z=1.645z = 1.645z=1.645.
+•	If z>1.645z > 1.645z>1.645, we reject H0H_0H0.
+•	Here, z=2.68z = 2.68z=2.68, which exceeds 1.6451.6451.645.
+Thus, we reject the null hypothesis.
+________________________________________
+b. p-Value Approach
+Step 1: Calculate the p-value
+For z=2.68z = 2.68z=2.68, the p-value is:
+P(Z>2.68)P(Z > 2.68)P(Z>2.68)
+Using a standard normal table or calculator:
+P(Z>2.68)=1−P(Z≤2.68)=1−0.9963=0.0037P(Z > 2.68) = 1 - P(Z \leq 2.68) = 1 - 0.9963 = 0.0037P(Z>2.68)=1−P(Z≤2.68)=1−0.9963=0.0037
+Step 2: Compare p-value with α\alphaα
+•	The p-value (0.00370.00370.0037) is less than α=0.05\alpha = 0.05α=0.05.
+Thus, we reject the null hypothesis.
+________________________________________
+Comparison of the Two Approaches
+Both the rejection region approach and the p-value approach lead to the same conclusion: we reject the null hypothesis.
+________________________________________
+Conclusion
+There is sufficient evidence at the 5% significance level to conclude that more than 50% of Americans would not ride in a driverless car.
+
