--- a/HW1123/12_譚玥湄/CH09.04_Q09.md
+++ b/HW1123/12_譚玥湄/CH09.04_Q09.md
@@ -5,3 +5,51 @@ a. If we wish to test the claim that the new tax laws help small businesses surv
 b. Find the value of the test statistic based on ˆp, the sample proportion of failed small businesses.  
 c. What is the rejection region based on a significance level of $$\alpha$$ =.05? Can you conclude that the new tax structure helps small businesses survive?  
 d. Find the p-value for the test. Does your conclusion in part c change?  
+
+---
+Let's analyze the problem step-by-step to test the claim that the new tax laws help small businesses survive.
+________________________________________
+a. State the hypotheses
+•	Null hypothesis (H0H_0H0): The proportion of small businesses that fail in their first year has not changed (p=0.20p = 0.20p=0.20).
+•	Alternative hypothesis (HaH_aHa): The proportion of small businesses that fail in their first year has decreased (p<0.20p < 0.20p<0.20).
+This is a one-tailed test to determine if the failure rate has decreased under the new tax laws.
+________________________________________
+b. Calculate the test statistic
+Step 1: Sample proportion
+The sample proportion of failed businesses is:
+p^=xn=30200=0.15\hat{p} = \frac{x}{n} = \frac{30}{200} = 0.15p^=nx=20030=0.15
+Step 2: Test statistic formula
+The test statistic for a proportion is:
+z=p^−p0p0(1−p0)nz = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0 (1 - p_0)}{n}}}z=np0(1−p0)p^−p0
+Where:
+•	p^=0.15\hat{p} = 0.15p^=0.15 (sample proportion),
+•	p0=0.20p_0 = 0.20p0=0.20 (null hypothesis proportion),
+•	n=200n = 200n=200 (sample size).
+Substitute the values:
+z=0.15−0.200.20(1−0.20)200=−0.050.16200=−0.050.0008=−0.050.02828≈−1.77z = \frac{0.15 - 0.20}{\sqrt{\frac{0.20 (1 - 0.20)}{200}}} = \frac{-0.05}{\sqrt{\frac{0.16}{200}}} = \frac{-0.05}{\sqrt{0.0008}} = \frac{-0.05}{0.02828} \approx -1.77z=2000.20(1−0.20)0.15−0.20=2000.16−0.05=0.0008−0.05=0.02828−0.05≈−1.77
+________________________________________
+c. Rejection region and conclusion
+Step 1: Critical value
+At a significance level of α=0.05\alpha = 0.05α=0.05, the critical value for a one-tailed test (lower tail) is:
+zcritical=−1.645z_{\text{critical}} = -1.645zcritical=−1.645
+Step 2: Compare test statistic to critical value
+•	If z<−1.645z < -1.645z<−1.645, we reject H0H_0H0.
+•	Here, z=−1.77<−1.645z = -1.77 < -1.645z=−1.77<−1.645.
+Conclusion
+Since z=−1.77z = -1.77z=−1.77 falls in the rejection region, we reject the null hypothesis. This suggests that the new tax laws help small businesses survive, as the failure rate has significantly decreased.
+________________________________________
+d. Calculate the p-value
+Step 1: Find p-value for z=−1.77z = -1.77z=−1.77
+The p-value is the probability of observing a test statistic as extreme as z=−1.77z = -1.77z=−1.77 under the null hypothesis. Using a standard normal table or calculator:
+P(Z<−1.77)≈0.0384P(Z < -1.77) \approx 0.0384P(Z<−1.77)≈0.0384
+Step 2: Compare p-value with α\alphaα
+•	The p-value (0.03840.03840.0384) is less than α=0.05\alpha = 0.05α=0.05.
+Conclusion
+Since the p-value is smaller than the significance level, we again reject the null hypothesis. The conclusion remains the same: the new tax structure helps small businesses survive.
+________________________________________
+Summary
+•	The test statistic is z=−1.77z = -1.77z=−1.77.
+•	The rejection region is z<−1.645z < -1.645z<−1.645, and the test statistic falls within this region.
+•	The p-value is 0.03840.03840.0384, which is less than α=0.05\alpha = 0.05α=0.05.
+•	Both the rejection region and p-value approaches lead to the conclusion that the new tax structure helps small businesses survive.
+
