--- a/HW1123/12_譚玥湄/CH09.02_Q25.md
+++ b/HW1123/12_譚玥湄/CH09.02_Q25.md
@@ -8,21 +8,18 @@ c. Conduct a statistical test of the null hypothesis and state your conclusion.
 ---
 
 We are testing whether the data provide sufficient evidence to refute the manufacturer’s claim that the mean potency of the antibiotic is 80%. Here's the solution step-by-step:
-________________________________________
+
+---
 Part (a): State the Null Hypothesis
-The null hypothesis assumes the manufacturer's claim is correct:
-H0:μ=80%
+The null hypothesis assumes the manufacturer's claim is correct: $$H_0$$:μ=80%
 
-________________________________________
-Part (b): State the Alternative Hypothesis
-The alternative hypothesis reflects the suspicion that the mean potency is not equal to 80%:
-Ha:μ <> 80%
+Part (b): State the Alternative Hypothesis  
+The alternative hypothesis reflects the suspicion that the mean potency is not equal to 80%:  $$H_a$$:μ <> 80%
 
-________________________________________
 Part (c): Conduct the Statistical Test
 We will use a ttt-test because the population standard deviation is unknown, and the sample size is n=100, which is sufficiently large.
 Step 1: Test Statistic Formula
-The test statistic is calculated as:
+The test statistic is calculated as:  
 ![image](https://github.com/user-attachments/assets/a1b0c2d5-636d-4ae0-b1cc-11f6cf9be226)
 
 Step 1: Define test statistic
@@ -33,26 +30,23 @@ Where:
 •	s=0.8 (sample standard deviation),
 •	n=100 (sample size).
 
-________________________________________
 Step 2: Compute the Test Statistic
-Substitute the values into the formula:
+Substitute the values into the formula:  
 ![image](https://github.com/user-attachments/assets/98e6e1bc-a944-4d6a-b0d8-6d16732084b8)
 
-________________________________________
 Step 3: Determine the Critical Value
 For a two-tailed test at α=0.05 and degrees of freedom (df=n−1=99), the critical ttt-values can be found using a t-distribution table or software:
 t∗=±1.984
-________________________________________
-Step 4: Compare Test Statistic and Critical Value 
-![Uploading image.png…]()
 
+Step 4: Compare Test Statistic and Critical Value 
 •	If t≤−1.984, reject $$H_0$$.
 •	Since t=−3.75<−1.984, we reject $$H_0$$.
-________________________________________
+
+
 Conclusion:
 The test statistic falls in the rejection region. Therefore, at the 5% significance level, there is sufficient evidence to refute the manufacturer's claim that the mean potency of the antibiotic is 80%.
-________________________________________
-Additional Context
-Practical Interpretation:
+
+Additional Context  
+Practical Interpretation:  
 The sample data suggest that the actual mean potency of the antibiotic is significantly different from 80%. This discrepancy could indicate a quality control issue that requires further investigation.
 
