--- a/HW1123/HW1123Q08.md
+++ b/HW1123/HW1123Q08.md
@@ -23,7 +23,7 @@
 >
 >Population proportion under $H_0$ $(p0)$ $= 0.50$
 >
->Sample size $(N) = 500
+>Sample size $(N) = 500$
 >
 >**3.Test Statistic($Z$-test for proportions):**
 > 
