--- a/HW1123/12_譚玥湄/CH09.02_Q25.md
+++ b/HW1123/12_譚玥湄/CH09.02_Q25.md
@@ -25,10 +25,10 @@ The test statistic is calculated as:
 Step 1: Define test statistic
 The test statistic for a population mean when the population standard deviation is unknown is:
 Where:
-•	$$\bar{x}$$ =79.7% (sample mean),
-•	μ0=80% (hypothesized mean),
-•	s=0.8 (sample standard deviation),
-•	n=100 (sample size).
+•	$$\bar{x}$$ =79.7% (sample mean)  
+•	μ0=80% (hypothesized mean)  
+•	s=0.8 (sample standard deviation)  
+•	n=100 (sample size)  
 
 Step 2: Compute the Test Statistic
 Substitute the values into the formula:  
