--- a/HW1123/12_譚玥湄/CH09.02_Q25.md
+++ b/HW1123/12_譚玥湄/CH09.02_Q25.md
@@ -9,7 +9,6 @@ c. Conduct a statistical test of the null hypothesis and state your conclusion.
 
 We are testing whether the data provide sufficient evidence to refute the manufacturer’s claim that the mean potency of the antibiotic is 80%. Here's the solution step-by-step:
 
----
 Part (a): State the Null Hypothesis
 The null hypothesis assumes the manufacturer's claim is correct: $$H_0$$:μ=80%
 
@@ -35,7 +34,7 @@ Substitute the values into the formula:
 ![image](https://github.com/user-attachments/assets/98e6e1bc-a944-4d6a-b0d8-6d16732084b8)
 
 Step 3: Determine the Critical Value
-For a two-tailed test at α=0.05 and degrees of freedom (df=n−1=99), the critical ttt-values can be found using a t-distribution table or software:
+For a two-tailed test at α=0.05 and degrees of freedom (df=n−1=99), the critical t-values can be found using a t-distribution table or software:
 t∗=±1.984
 
 Step 4: Compare Test Statistic and Critical Value  
