--- a/HW1123/06_陳嘉祥/CH10.02_Q20.md
+++ b/HW1123/06_陳嘉祥/CH10.02_Q20.md
@@ -1,1 +1,6 @@
+---
+Title: HW1123_06_Titan(陳嘉祥)
+---  
+
+![CH10 02_Q20](https://github.com/user-attachments/assets/b962f564-1423-418d-8b59-f8cfd12046ee)
 
