--- a/HW1123/06_陳嘉祥/CH10.02_Q21.md
+++ b/HW1123/06_陳嘉祥/CH10.02_Q21.md
@@ -1,1 +1,6 @@
+---
+Title: HW1123_06_Titan(陳嘉祥)
+---  
+
+![CH10 02_Q21](https://github.com/user-attachments/assets/f6ec582d-105b-4da2-8001-6726b6574231)
 
