--- a/HW1123/06_陳嘉祥/CH10.02_Q20.md
+++ b/HW1123/06_陳嘉祥/CH10.02_Q20.md
@@ -4,3 +4,20 @@ Title: HW1123_06_Titan(陳嘉祥)
 
 ![CH10 02_Q20](https://github.com/user-attachments/assets/b962f564-1423-418d-8b59-f8cfd12046ee)
 
+由題目得知：健康人的腦部腦血流量 (CBF) 呈正態分佈，平均值為 74。隨機抽取 25 名中風患者，測得 CBF 平均值
+
+x¯= 69.7，標準差 s=16。以顯著性水平 α=0.05 檢驗中風患者的平均 CBF 是否與健康人不同。
+
+
+$$H_0$$ : $$\mu$$ = 74
+
+$$H_a$$ : $$\mu\ne$$ 74 (雙尾檢定)  
+
+已知條件 : n=25, $$\bar{x} $$=0.797, s=0.008 , $$\sigma $$未知，小樣本數，故採用t分配進行檢定。 
+
+基於顯著性水平 α=0.05，雙尾檢定α/2=0.025，自由度 =24，$$t_{24,0.025}$$，查t分配表得到 : $$t_{24,0.025}$$ = -2.064
+
+t-test : t = $$\frac{\bar{x} - \mu}{s/\sqrt{n}} $$  = P(t>| $$\frac{69.7 - 74}{16/\sqrt{25}} $$ |) = -1.3438 > $$\alpha/2=-2.064 $$。    
+
+因為t檢定量未落在Rejection Region，故不拒絕 $$H_{0} $$ 。   
+
