--- a/HW1123/06_陳嘉祥/CH10.02_Q20.md
+++ b/HW1123/06_陳嘉祥/CH10.02_Q20.md
@@ -13,9 +13,9 @@ $$H_0$$ : $$\mu$$ = 74
 
 $$H_a$$ : $$\mu\ne$$ 74 (雙尾檢定)  
 
-已知條件 : n=25, $$\bar{x} $$=0.797, s=0.008 , $$\sigma $$未知，小樣本數，故採用t分配進行檢定。 
+已知條件 : n=25, $$\bar{x} $$=0.797, s=0.008 , $$\sigma $$未知，小樣本，樣本做隨機抽樣來自常態母體，故採用t分配進行檢定。 
 
-基於顯著性水平 α=0.05，雙尾檢定α/2=0.025，自由度 =24，$$t_{24,0.025}$$，查t分配表得到 : $$t_{24,0.025}$$ = -2.064
+基於顯著水準 α=0.05，雙尾檢定為 : α/2=0.025，自由度 =24，$$t_{24,0.025}$$，查t分配表得到 : $$t_{24,0.025}$$ = -2.064
 
 t-test : t = $$\frac{\bar{x} - \mu}{s/\sqrt{n}} $$  = P(t>| $$\frac{69.7 - 74}{16/\sqrt{25}} $$ |) = -1.3438 > $$\alpha/2=-2.064 $$。    
 
