--- a/HW1123/HW1123Q12.md
+++ b/HW1123/HW1123Q12.md
@@ -4,7 +4,7 @@ Title: HW1123_06_Titan(陳嘉祥)
 
 ![CH10 01_Q06-07](https://github.com/user-attachments/assets/74b92515-7b2b-4730-83b4-26643982ad2e)
 
-### 6. 依題意，查表找出右尾區域當顯著水準 $$\alpha=0.10，d.f.=7$$的t值。
+### 6. 依題意，查表找出右尾區域，當顯著水準 $$\alpha=0.10，d.f.=7$$的t值。
 標準t分配對稱於0，求右尾區域t值，直接查詢t分配表即可。 
 
 $$t_{n-1,\alpha}$$ , $$t_{7,0.05}$$，查t分配表得到 : 
@@ -15,7 +15,7 @@ $t_{7,0.05} = 1.415$
 
 ![CH10 01_Q06-table1](https://github.com/user-attachments/assets/1d6d784a-02df-488c-a72c-4fc2b30e965d)  
 
-### 7. 依題意，查表找出左尾區域當顯著水準 $$\alpha=0.01，d.f.=9$$的t值。
+### 7. 依題意，查表找出左尾區域，當顯著水準 $$\alpha=0.01，d.f.=9$$的t值。
 標準t分配對稱於0，因為係求左尾區域t值，查詢t分配表時，左尾區域的t值需要做負號的轉換。 
 
 故 $$-t_{n-1,\alpha}$$ , $$-t_{9,0.01}$$，查t分配表得到 : 
