--- a/HW1123/21_徐偉峻/CH09.02_Q11-13.md
+++ b/HW1123/21_徐偉峻/CH09.02_Q11-13.md
@@ -1,2 +1,57 @@
 # CH09.02_Q11-13 #
 
+
+## Q11.
+
+A right-tailed test with observed z = 1.15  
+$\{H_0} : \mu = \mu_0$  
+$\{H_\alpha} : \mu > \mu_0$  
+Assume $\alpha$ = 0.1 or 0.05 or 0.01
+
+P-value = P( z > 1.15) = 1 -P( z < 1.15)  
+Accroding to the table 3 in Appendix from textbook. P( z < 1.15) = 0.8749  
+1 - 0.8749 = 0.1251  
+
+If p-value is smaller than $\alpha$, reject $\{H_0}$. Otherwise, do not reject $\{H_0}$
+| Significance Level | Decision      |
+|---------------------|---------------|
+| 0.1               | Accept $\{H_0}$    |
+| 0.05                | Accept $\{H_0}$    |
+| 0.01               | Accept $\{H_0}$     |
+
+
+## Q12.
+
+A two-tailed test with observed z = -2.78
+$\{H_0} : \mu = \mu_0$  
+$\{H_\alpha} : \mu \ne \mu_0$  
+Assume $\alpha$ = 0.05 or 0.1 or 0.01
+
+P-value = 2 $\times P( z < -2.78 )    
+Accroding to the table 3 in Appendix from textbook. P( z < -2.78 ) = 0.0027  
+0.0027 $\times$ 2 = 0.0054
+
+If p-value is smaller than $\alpha$, reject $\{H_0}$. Otherwise, do not reject $\{H_0}$
+| Significance Level | Decision      |
+|---------------------|---------------|
+| 0.1               | Reject $\{H_0}$    |
+| 0.05                | Reject $\{H_0}$    |
+| 0.01               | Reject $\{H_0}$     |
+
+
+## Q13.
+
+A left-tailed test with observed z = -1.81  
+$\{H_0} : \mu = \mu_0$  
+$\{H_\alpha} : \mu < \mu_0$  
+Assume $\alpha$ = 0.05 or 0.1 or 0.01
+
+P-value = P( z < -1.81 )    
+Accroding to the table 3 in Appendix from textbook. P( z < -1.81 ) = 0.0351
+
+If p-value is smaller than $\alpha$, reject $\{H_0}$. Otherwise, do not reject $\{H_0}$
+| Significance Level | Decision      |
+|---------------------|---------------|
+| 0.1               | Reject $\{H_0}$    |
+| 0.05                | Reject $\{H_0}$    |
+| 0.01               | Accept $\{H_0}$     |
