--- a/HW1123/02_顏子軒/CH09.02_Q11-13.md
+++ b/HW1123/02_顏子軒/CH09.02_Q11-13.md
@@ -17,9 +17,9 @@ Accroding to the table 3 in Appendix from textbook. P( z < 1.15) = 0.8749
 If p-value is smaller than $\alpha$, reject $\{H_0}$. Otherwise, do not reject $\{H_0}$
 | Significance Level | Decision      |
 |---------------------|---------------|
-| 0.1               | Accept $\{H_0}$    |
-| 0.05                | Accept $\{H_0}$    |
-| 0.01               | Accept $\{H_0}$     |
+| 0.1               | Do not reject $\{H_0}$    |
+| 0.05                | Do not reject $\{H_0}$    |
+| 0.01               | Do not reject $\{H_0}$     |
 
 
 ## Q12.
