--- a/HW1123/02_顏子軒/CH09.02_Q11-13.md
+++ b/HW1123/02_顏子軒/CH09.02_Q11-13.md
@@ -29,7 +29,7 @@ $\{H_0} : \mu = \mu_0$
 $\{H_\alpha} : \mu \ne \mu_0$  
 Assume $\alpha$ = 0.05 or 0.1 or 0.01
 
-P-value = 2 $\times P( z < -2.78 )    
+P-value = 2 $\times P( z < -2.78 )$    
 Accroding to the table 3 in Appendix from textbook. P( z < -2.78 ) = 0.0027  
 0.0027 $\times$ 2 = 0.0054
 
@@ -56,4 +56,4 @@ If p-value is smaller than $\alpha$, reject $\{H_0}$. Otherwise, do not reject $
 |---------------------|---------------|
 | 0.1               | Reject $\{H_0}$    |
 | 0.05                | Reject $\{H_0}$    |
-| 0.01               | Accept $\{H_0}$     |
+| 0.01               | Do not reject $\{H_0}$     |
