--- a/HW1123/HW1123Q06.md
+++ b/HW1123/HW1123Q06.md
@@ -18,7 +18,7 @@ You wish to show that p < .3.
 
 $\hat{p} = \frac{297}{1000} = 0.297$
 
-a. $H_0 : p = 0.3$ vs $$H_a$$ : p < 0.3 Left-Sided Test(左尾檢定) 
+a. $H_0 : p = p_{0} = 0.3$ vs $$H_a$$ : p < 0.3 Left-Sided Test(左尾檢定) 
 
 b. $\alpha$ = 0.05, Z = -1.645 (查表得知), RR = {Z < -1.645}
 
