--- a/HW1123/HW1123Q06.md
+++ b/HW1123/HW1123Q06.md
@@ -34,7 +34,7 @@ You wish to show that p differs from .4.
 
 $\hat{p} = \frac{529}{1400} = 0.3779$
 
-a. $H_0 : p = 0.4$ vs $H_a$ : p $\ne$ 0.4 Two-Sided Test(雙尾檢定)
+a. $H_0 : p = p_{0} = 0.4$ vs $H_a$ : p $\ne$ 0.4 Two-Sided Test(雙尾檢定)
 
 b. $\frac{\alpha}{2}$ = 0.025, Z = 1.96 (查表得知), RR = {Z < -1.96, Z > 1.96}
 
@@ -50,7 +50,7 @@ You wish to show that p > .5.
 
 $\hat{p} = \frac{72}{120} = 0.6$
 
-a. $H_0 : p = 0.5$ vs $H_a$ : p > 0.5 Two-Sided Test (右尾檢定)
+a. $H_0 : p = p_{0} = 0.5$ vs $H_a$ : p > 0.5 Two-Sided Test (右尾檢定)
 
 b. Set $\alpha $ = 0.05  Z = 1.645 (查表得知) 
 
