--- a/HW1123/HW1123Q11.md
+++ b/HW1123/HW1123Q11.md
@@ -98,7 +98,7 @@ P(Z≤4.60)≈0.999997
 
 2.計算右尾累積概率：
 
-p-value=1−0.999997=0.000003  P-value < 0.01 highly significant
+p-value=1−0.999997=0.000003  
 
 p 值 ≈0.000003 是一個極小的值，表明如果檢測計畫對存活率沒有影響( $H_0$成立)，觀察到樣本存活率 82% 或更高的概率幾乎為零。
 
