--- a/HW1123/HW1123Q02.md
+++ b/HW1123/HW1123Q02.md
@@ -18,9 +18,9 @@ Accroding to the table 3 in Appendix from textbook. P( z < 1.15) = 0.8749
 If p-value is smaller than $\alpha$, reject $\{H_0}$. Otherwise, do not reject $\{H_0}$
 | Significance Level | Decision      |
 |---------------------|---------------|
-| 0.1               | Accept $\{H_0}$    |
-| 0.05                | Accept $\{H_0}$    |
-| 0.01               | Accept $\{H_0}$     |
+| 0.1               | Do not reject $\{H_0}$    |
+| 0.05                | Do not reject $\{H_0}$    |
+| 0.01               | Do not reject $\{H_0}$     |
 
 
 ## Q12.
@@ -30,7 +30,7 @@ $\{H_0} : \mu = \mu_0$
 $\{H_\alpha} : \mu \ne \mu_0$  
 Assume $\alpha$ = 0.05 or 0.1 or 0.01
 
-P-value = 2 $\times P( z < -2.78 )    
+P-value = 2 $\times$ P( z < -2.78 )    
 Accroding to the table 3 in Appendix from textbook. P( z < -2.78 ) = 0.0027  
 0.0027 $\times$ 2 = 0.0054
 
@@ -57,4 +57,4 @@ If p-value is smaller than $\alpha$, reject $\{H_0}$. Otherwise, do not reject $
 |---------------------|---------------|
 | 0.1               | Reject $\{H_0}$    |
 | 0.05                | Reject $\{H_0}$    |
-| 0.01               | Accept $\{H_0}$     |
+| 0.01               | Do not reject $\{H_0}$     |
