--- a/HW1123/HW1123Q06.md
+++ b/HW1123/HW1123Q06.md
@@ -9,7 +9,7 @@ provide an $\alpha$ = .05 rejection region; 顯著水準 (significance level) $\
 
 and state your conclusions. 陳述結論
 
-![CH09 04_Q01-03](https://github.com/user-attachments/assets/2523ba3a-7af4-4f41-b8cf-bcf1764df9ef)
+<img width="982" alt="CH09 04_Q01-03" src="https://github.com/user-attachments/assets/47b98e1a-d21a-4c7b-8108-8029900b2164">
 
 1. A random sample of n = 1000 from a binomial population contained 279 successes.
 You wish to show that p < .3.
