--- a/HW1123/HW1123Q03.md
+++ b/HW1123/HW1123Q03.md
@@ -19,7 +19,7 @@
 - 樣本標準差 $s = 0.18$
 - 假設 α = 0.05
 
-Z分配公式： $z = \frac{\bar{x} - \mu}{s / \sqrt{n}}$
+檢定統計量 z 的計算公式： $z = \frac{\bar{x} - \mu}{s / \sqrt{n}}$
 = $\frac{1.01 - 1}{0.18 / \sqrt{35}} = \frac{0.01}{0.0304} \approx 0.329$
 
 查表得： $P(Z < 0.33) = 0.6293$
