--- a/HW1123/04_林佑娟/CH09.02_Q08.10.md
+++ b/HW1123/04_林佑娟/CH09.02_Q08.10.md
@@ -1,1 +1,5 @@
+學號 513717006 林佑娟
+
+<img width="317" alt="截圖 2024-12-07 上午10 07 07" src="https://github.com/user-attachments/assets/95d7f2f7-dce9-4c44-a4f5-0dd52b77ebb7">
+
 
