--- a/HW1123/14_陳偉豪/CH09.04_Q01-Q03.md
+++ b/HW1123/14_陳偉豪/CH09.04_Q01-Q03.md
@@ -35,7 +35,7 @@ $p < 0.3$ 此情況不顯著
 
 $n=1400$  
 
-$\hat p = 0.279$ 
+$\hat{p} = \frac{x}{n} = \frac{529}{1400} = 0.3779$  
 
 $H_0 : p = 0.4$
    
@@ -43,15 +43,34 @@ $H_a : p \ne 0.4$
 
 $\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} \rightarrow Z$  
 
-$Z^* = \frac{0.3779 - 0.4}{\sqrt{\frac{0.4*0.6}{1400}}} = -1.42$  
+$Z^* = \frac{0.3779 - 0.4}{\sqrt{\frac{0.4*0.6}{1400}}} = -1.69$  
 
-$\alpha = 0.05$ $\quad$ 拒絕域 {Z>1.96 or Z<-1.96}   
-
-$p-value =2*P(z<-1.42) =\approx 0.1556 $  
-
-$p > 0.3$
+$\alpha = 0.05$ $\quad$ 拒絕域 $Z>1.96$ or $Z<-1.96$   
 
 因為沒有落在拒絕域中，故不拒絕虛無假設 $H_0$  
 
-$p \ne 0.4$ 此情況不顯著  
+$p \ne 0.4$ 此情況不顯著   
+
+
+
+### 3.  
+
+$n=120$  
+
+$\hat{p} = \frac{x}{n} = \frac{72}{120} = 0.6$  
+
+$H_0 : p = 0.5$
+   
+$H_a : p > 0.5$
+
+$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} \rightarrow Z$  
+
+$Z^* = \frac{0.6 - 0.5}{\sqrt{\frac{0.5*0.5}{120}}} = 2.19$  
+
+$\alpha = 0.05$ $\quad$ 拒絕域 ${Z>1.645}$   
+
+因為落在拒絕域中，故拒絕虛無假設 $H_0$  
+
+$p > 0.5$ 此情況顯著  
+
 
