--- a/HW1123/HW1123Q04.md
+++ b/HW1123/HW1123Q04.md
@@ -9,6 +9,8 @@
 
 μ=5.86，n=40， $\bar{x}$ =5.56， $s$ =0.70
 
+![image](https://github.com/user-attachments/assets/9bb8b626-02ce-46be-867f-99be36c93e4a)
+
 ![image](https://github.com/user-attachments/assets/d3e25622-dc77-4ba2-808a-0643062e1389)
 
 ## **a. 這些數據是否指出該診所中3個月大女baby的平均體重低於5.86公斤？使用顯著水準 $\alpha = 0.05$ 進行檢定**
