--- a/HW1123/10_蔡佳媛/CH09.02_Q25_10_Cathy.md
+++ b/HW1123/10_蔡佳媛/CH09.02_Q25_10_Cathy.md
@@ -9,11 +9,11 @@ $\alpha$ = 0.05
 
 ### a. State the $H_{0}$ to be tested.
 
-$H_{0}$ = 0.8  
+$H_{0} \neq$ 0.8  
 
 ### b. State the $H_{a}$.
 
-$H_{a} \neq$ 0.8  
+$H_{a}$ = 0.8  
 
 ### c. Conduct a statistical test of the $H_{0}$ and state your conclusion.
 
