--- a/HW1123/04_林佑娟/CH09.02_Q23.md
+++ b/HW1123/04_林佑娟/CH09.02_Q23.md
@@ -1,1 +1,3 @@
+學號513717006 林佑娟
 
+<img width="413" alt="截圖 2024-12-07 上午10 34 33" src="https://github.com/user-attachments/assets/086661da-ffea-494b-bb0e-703a8e616a92">
