--- a/HW1123/02_顏子軒/CH09.02_Q11-13.md
+++ b/HW1123/02_顏子軒/CH09.02_Q11-13.md
@@ -1,59 +1,46 @@
-![CH09 02_Q11-13](https://github.com/user-attachments/assets/aeb0fc52-9712-495d-9999-7419aab92f89)  
-https://haosquare.com/one-tailed-vs-two-tailed-test/
 
-![image](https://github.com/user-attachments/assets/330b66ff-6289-45ff-9088-40a8b07a3a78)
+![image](https://github.com/user-attachments/assets/8d3f35f5-df65-4ddf-9bf9-a2dee65dde66)
 
-## Q11.
+## Find the p-value for the z-tests and determine the significance of the results.
 
-A right-tailed test with observed z = 1.15  
-$\{H_0} : \mu = \mu_0$  
-$\{H_\alpha} : \mu > \mu_0$  
-Assume $\alpha$ = 0.1 or 0.05 or 0.01
+### 11. A right-tailed test with observed z = 1.15
 
-P-value = P( z > 1.15) = 1 -P( z < 1.15)  
-Accroding to the table 3 in Appendix from textbook. P( z < 1.15) = 0.8749  
-1 - 0.8749 = 0.1251  
+$P(z \gt 1.15) = 1 - P(z \lt 1.15) = 1 - 0.8749 = 0.1251$  
 
-If p-value is smaller than $\alpha$, reject $\{H_0}$. Otherwise, do not reject $\{H_0}$
-| Significance Level | Decision      |
-|---------------------|---------------|
-| 0.1               | Do not reject $\{H_0}$    |
-| 0.05                | Do not reject $\{H_0}$    |
-| 0.01               | Do not reject $\{H_0}$     |
+If $\alpha \gt 0.1251$, $H_{0}$ is rejected  
+If $\alpha \lt 0.1251$, $H_{0}$ is not rejected  
+
+The p-value is greater than 0.1, $H_{0}$ is not rejected. The results are **not statistically significant**.
+
+![image](https://github.com/user-attachments/assets/bcc05a6e-63f9-450a-9363-9dd831544154)
 
 
-## Q12.
+### 12. A two-tailed test with observed z = -2.78
 
-A two-tailed test with observed z = -2.78
-$\{H_0} : \mu = \mu_0$  
-$\{H_\alpha} : \mu \ne \mu_0$  
-Assume $\alpha$ = 0.05 or 0.1 or 0.01
+$P(z \lt -2.78) = 0.0027$  
+$P(z \gt 2.78) = 0.0027$  
+For a two tailed test, the total p-value = $2 \times 0.0027 = 0.0054$  
 
-P-value = 2 $\times P( z < -2.78 )$    
-Accroding to the table 3 in Appendix from textbook. P( z < -2.78 ) = 0.0027  
-0.0027 $\times$ 2 = 0.0054
+If $\alpha \lt 0.0054$, $H_{0}$ is rejected  
+If $\alpha \gt 0.0054$, $H_{0}$ is not rejected
 
-If p-value is smaller than $\alpha$, reject $\{H_0}$. Otherwise, do not reject $\{H_0}$
-| Significance Level | Decision      |
-|---------------------|---------------|
-| 0.1               | Reject $\{H_0}$    |
-| 0.05                | Reject $\{H_0}$    |
-| 0.01               | Reject $\{H_0}$     |
+The p-value is less than 0.01, $H_{0}$ is rejected. The results are **highly significant**.
+
+![image](https://github.com/user-attachments/assets/ae0bf6a9-7456-4aa1-afea-0b7a221768b0)
 
 
-## Q13.
+### 13. A left-tailed test with observed z = -1.81
 
-A left-tailed test with observed z = -1.81  
-$\{H_0} : \mu = \mu_0$  
-$\{H_\alpha} : \mu < \mu_0$  
-Assume $\alpha$ = 0.05 or 0.1 or 0.01
+$P(z \lt -1.81) = 0.0351$  
 
-P-value = P( z < -1.81 )    
-Accroding to the table 3 in Appendix from textbook. P( z < -1.81 ) = 0.0351
+If $\alpha \gt 0.0351$, $H_{0}$ is rejected  
+If $\alpha \lt 0.0351$, $H_{0}$ is not rejected
 
-If p-value is smaller than $\alpha$, reject $\{H_0}$. Otherwise, do not reject $\{H_0}$
-| Significance Level | Decision      |
-|---------------------|---------------|
-| 0.1               | Reject $\{H_0}$    |
-| 0.05                | Reject $\{H_0}$    |
-| 0.01               | Do not reject $\{H_0}$     |
+The p-value is between 0.01 and 0.05, $H_{0}$ is rejected. The results are **statistically significant**.
+
+![image](https://github.com/user-attachments/assets/38ff2bae-986a-411f-8354-b4a672a724b8)
+
+![image](https://github.com/user-attachments/assets/30dbc6b2-2762-4b9b-bd08-a455c4939e39)
+
+
+
