--- a/HW1123/HW1123Q02.md
+++ b/HW1123/HW1123Q02.md
@@ -4,6 +4,9 @@ https://haosquare.com/one-tailed-vs-two-tailed-test/
 
 ![image](https://github.com/user-attachments/assets/330b66ff-6289-45ff-9088-40a8b07a3a78)
 
+<img width="832" alt="image" src="https://github.com/user-attachments/assets/2ee76cc5-040c-400f-9ad5-7ab2eaa0af2b">
+
+
 ## Q11.
 
 A right-tailed test with observed z = 1.15  
@@ -22,6 +25,7 @@ If p-value is smaller than $\alpha$, reject $\{H_0}$. Otherwise, do not reject $
 | 0.05                | Do not reject $\{H_0}$    |
 | 0.01               | Do not reject $\{H_0}$     |
 
+Ans: Not statistical significant
 
 ## Q12.
 
@@ -41,6 +45,8 @@ If p-value is smaller than $\alpha$, reject $\{H_0}$. Otherwise, do not reject $
 | 0.05                | Reject $\{H_0}$    |
 | 0.01               | Reject $\{H_0}$     |
 
+Ans: Highly significant 
+
 
 ## Q13.
 
@@ -58,3 +64,8 @@ If p-value is smaller than $\alpha$, reject $\{H_0}$. Otherwise, do not reject $
 | 0.1               | Reject $\{H_0}$    |
 | 0.05                | Reject $\{H_0}$    |
 | 0.01               | Do not reject $\{H_0}$     |
+
+
+Ans: Statistical Significant
+
+
