--- a/HW1123/21_徐偉峻/CH09.02_Q11-13.md
+++ b/HW1123/21_徐偉峻/CH09.02_Q11-13.md
@@ -19,6 +19,7 @@ If p-value is smaller than $\alpha$, reject $\{H_0}$. Otherwise, do not reject $
 | 0.05                | Accept $\{H_0}$    |
 | 0.01               | Accept $\{H_0}$     |
 
+ Ans. not significant 
 
 ## Q12.
 
@@ -38,6 +39,7 @@ If p-value is smaller than $\alpha$, reject $\{H_0}$. Otherwise, do not reject $
 | 0.05                | Reject $\{H_0}$    |
 | 0.01               | Reject $\{H_0}$     |
 
+Ans. Highly significant
 
 ## Q13.
 
@@ -55,3 +57,5 @@ If p-value is smaller than $\alpha$, reject $\{H_0}$. Otherwise, do not reject $
 | 0.1               | Reject $\{H_0}$    |
 | 0.05                | Reject $\{H_0}$    |
 | 0.01               | Accept $\{H_0}$     |
+
+Ans. Statistically signifacant
