--- a/HW1123/06_陳嘉祥/CH09.02_Q11-13.md
+++ b/HW1123/06_陳嘉祥/CH09.02_Q11-13.md
@@ -10,7 +10,7 @@ Title: HW1123_06_Titan(陳嘉祥)
 
 假設 $\alpha = 0.05$，  
 
-查表得到 : P-Value=P(Z>1.15)=1-P(Z<1.15)=1-0.8749=0.1251 > $\alpha = 0.05$，因P值沒有落入Rejection Region，故沒有顯著性。
+查表得到 : P-Value=P(Z>1.15)=1-P(Z<1.15)=1-0.8749=0.1251 > $\alpha = 0.05$，因P值沒有落入Rejection Region，故沒有顯著性(Not statistics significant)。
 
 ![CH09 02_Q11-13-Ztable1](https://github.com/user-attachments/assets/11521c91-b58b-4ee6-bb69-781116fef373)
 
@@ -19,7 +19,7 @@ Title: HW1123_06_Titan(陳嘉祥)
 
 假設 $\alpha = 0.05$， 
 
-查表得到 : P-Value=P(Z<-2.78)=0.0027，因係雙尾檢定，故2*P(Z>|-2.78|)=0.0054 < $\alpha = 0.05$，P值落入Rejection Region，具有顯著性。
+查表得到 : P-Value=P(Z<-2.78)=0.0027，因係雙尾檢定，故2*P(Z>|-2.78|)=0.0054 < $\alpha = 0.05$，P值落入Rejection Region，具有顯著性(Highly significant)。
 
 ![CH09 02_Q11-13-Ztable2](https://github.com/user-attachments/assets/f74c837a-a795-4435-8067-985bdab8c4c6)
 
@@ -28,7 +28,7 @@ Title: HW1123_06_Titan(陳嘉祥)
 
 假設 $\alpha = 0.05$， 
 
-查表得到 : P-Value=P(Z<-1.81)=0.0351 < $\alpha = 0.05$，因P值落入Rejection Region，故具有顯著性。
+查表得到 : P-Value=P(Z<-1.81)=0.0351 < $\alpha = 0.05$，因P值落入Rejection Region，故具有顯著性(Statistics significant)。
 
 ![CH09 02_Q11-13-Ztable3](https://github.com/user-attachments/assets/003f1fb0-f53d-4e85-8a3e-4d86b629d026)
 
