--- a/HW1123/15_林秀鴻/CH09.02_Q11-13.md
+++ b/HW1123/15_林秀鴻/CH09.02_Q11-13.md
@@ -21,7 +21,7 @@ If p-value is smaller than $\alpha$, reject $\{H_0}$. Otherwise, do not reject $
 | 0.05                | Do not reject $\{H_0}$    |
 | 0.01               | Do not reject $\{H_0}$     |
 
-
+Answer:Not significant
 ## Q12.
 
 A two-tailed test with observed z = -2.78
@@ -40,7 +40,7 @@ If p-value is smaller than $\alpha$, reject $\{H_0}$. Otherwise, do not reject $
 | 0.05                | Reject $\{H_0}$    |
 | 0.01               | Reject $\{H_0}$     |
 
-
+Answer: Highly Significant
 ## Q13.
 
 A left-tailed test with observed z = -1.81  
@@ -57,3 +57,5 @@ If p-value is smaller than $\alpha$, reject $\{H_0}$. Otherwise, do not reject $
 | 0.1               | Reject $\{H_0}$    |
 | 0.05                | Reject $\{H_0}$    |
 | 0.01               | Do not reject $\{H_0}$     |
+
+Answer:Statistically Significant
