--- a/HW1123/08_蕭宇辰/CH09.02_Q25.md
+++ b/HW1123/08_蕭宇辰/CH09.02_Q25.md
@@ -28,7 +28,7 @@ c.
 
 4.計算統計量
 
-$Z_stat$ = $\frac{(79.7% - 80%)}{0.8%/\sqrt{100}}$ = -3.75
+$Z_stat$ = $\frac{0.797-0.80}{0.8/\sqrt{100}}$ = -3.75
 
 5. 由 $$\alpha$$ = 0.05 reject region = {Z<-1.96 or Z>1.96}
 
