--- a/HW1123/HW1123Q03.md
+++ b/HW1123/HW1123Q03.md
@@ -4,6 +4,9 @@
 
 牛絞肉被包裝在小托盤中，目的是用來容納 1 磅的肉。一個包含 35 個小托盤隨機樣本的測量結果顯示，平均重量為 1.01 磅，標準差為 0.18 磅。
 
+<img width="487" alt="image" src="https://github.com/user-attachments/assets/a1b34a8a-801b-4d8a-91e9-fd81340bcd60">
+
+
 ### a. 如果你是品管經理，並希望確認平均漢堡肉重量是否確實為 1 磅，應檢定哪些假設？
 
    -虛無假設 $H_0$: $\mu = 1$ (平均重量為 1 磅)
