--- a/HW1123/10_蔡佳媛/CH09.04_Q01-03_10_Cathy.md
+++ b/HW1123/10_蔡佳媛/CH09.04_Q01-03_10_Cathy.md
@@ -6,8 +6,9 @@ $\alpha$ = 0.05
 
 ### 1. A random sample of n = 1000 from a binomial population contained 279 successes. You wish to show that $p$ < 0.3.
 
-$H_{0}$: $p \lt$ 0.3   
-$H_{a}$: $p \geq$ 0.3  
+$H_{0}$: $p \geq$ 0.3  
+$H_{a}$: $p \lt$ 0.3   
+
 
 Test statistic: z $\approx$ $\frac{\hat{p} - p_{0}}{\sqrt{\frac{p_{0} q_{0}}{n}}}$ = $\frac{0.279 - 0.3}{\sqrt{\frac{0.3 \times 0.7}{1000}}}$ = -1.449138 $\approx$ -1.45  
 
@@ -19,8 +20,9 @@ z > -1.645, does not fall into the rejection region and $H_{0}$ is not rejected
 
 ### 2. A random sample of n = 1400 observations from a binomial population produced $x$ = 529 successes. You wish to show that $p$ differs from 0.4.
 
-$H_{0}$: $p \neq$ 0.4  
-$H_{a}$: $p$ = 0.4  
+$H_{0}$: $p$ = 0.4  
+$H_{a}$: $p \neq$ 0.4  
+
 
 Test statistic: z $\approx$ $\frac{\hat{p} - p_{0}}{\sqrt{\frac{p_{0} q_{0}}{n}}}$ = $\frac{\frac{529}{1400} - 0.4}{\sqrt{\frac{0.4 \times 0.6}{1400}}}$ = -1.691189 $\approx$ -1.69  
 
@@ -32,8 +34,9 @@ z > -1.96, does not fall into the rejection region and $H_{0}$ is not rejected
 
 ### 3. 72 successes were observed in a random sample of n = 120 observations from a binomial population. You wish to show that $p$ > 0.5.
 
-$H_{0}$: $p \gt$ 0.5  
-$H_{a}$: $p \leq$ 0.5  
+$H_{0}$: $p \leq$ 0.5  
+$H_{a}$: $p \gt$ 0.5  
+
 
 Test statistic: z $\approx$ $\frac{\hat{p} - p_{0}}{\sqrt{\frac{p_{0} q_{0}}{n}}}$ = $\frac{\frac{72}{120} - 0.5}{\sqrt{\frac{0.5 \times 0.5}{120}}}$ = 2.19089 $\approx$ 2.19  
 
