--- a/HW1123/10_蔡佳媛/CH09.04_Q04-06_10_Cathy.md
+++ b/HW1123/10_蔡佳媛/CH09.04_Q04-06_10_Cathy.md
@@ -6,8 +6,8 @@ $\alpha$ = 0.05
 
 ### 4. n = 1000 and $x$ = 279. You wish to show that $p \lt$ 0.3.  
 
-$H_{0}$: $p \lt$ 0.3   
-$H_{a}$: $p \geq$ 0.3  
+$H_{0}$: $p \geq$ 0.3  
+$H_{a}$: $p \lt$ 0.3   
 
 Test statistic: z $\approx$ $\frac{\hat{p} - p_{0}}{\sqrt{\frac{p_{0} q_{0}}{n}}}$ = $\frac{0.279 - 0.3}{\sqrt{\frac{0.3 \times 0.7}{1000}}}$ = -1.449138 $\approx$ -1.45  
 
@@ -18,8 +18,8 @@ P(z $\lt$ -1.45) =  0.0735, which is greater than 0.05, $H_{0}$ is not rejected
 
 ### 5. n = 1400 and $x$ = 529 successes. You wish to show that $p$ differs from 0.4.  
 
-$H_{0}$: $p \neq$ 0.4  
-$H_{a}$: $p$ = 0.4  
+$H_{0}$: $p$ = 0.4  
+$H_{a}$: $p \neq$ 0.4  
 
 Test statistic: z $\approx$ $\frac{\hat{p} - p_{0}}{\sqrt{\frac{p_{0} q_{0}}{n}}}$ = $\frac{\frac{529}{1400} - 0.4}{\sqrt{\frac{0.4 \times 0.6}{1400}}}$ = -1.691189 $\approx$ -1.69  
 
@@ -30,8 +30,8 @@ P(z $\lt$ -1.69) = 0.0455, which is greater than $\frac{0.05}{2}, $H_{0}$ is not
 
 ### 6. 72 successes ina random sample of n = 1200. You wish to show that $p \gt$ 0.5.  
 
-$H_{0}$: $p \gt$ 0.5  
-$H_{a}$: $p \leq$ 0.5  
+$H_{0}$: $p \leq$ 0.5  
+$H_{a}$: $p \gt$ 0.5  
 
 Test statistic: z $\approx$ $\frac{\hat{p} - p_{0}}{\sqrt{\frac{p_{0} q_{0}}{n}}}$ = $\frac{\frac{72}{120} - 0.5}{\sqrt{\frac{0.5 \times 0.5}{120}}}$ = 2.19089 $\approx$ 2.19  
 
