--- a/HW1123/HW1123Q06.md
+++ b/HW1123/HW1123Q06.md
@@ -52,7 +52,7 @@ $\hat{p} = \frac{72}{120} = 0.6$
 
 a. $H_0 : p = p_{0} = 0.5$ vs $H_a$ : p > 0.5 Two-Sided Test (右尾檢定)
 
-b. Set $\alpha $ = 0.05  Z = 1.645 (查表得知) 
+b. $\alpha$ = 0.05  Z = 1.645 (查表得知) 
 
 c. The test statstic is $Z_{\text{STAT}} = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} = \frac{0.6 - 0.5}{\sqrt{\frac{0.5 \cdot 0.5}{120}}} = 2.191$     
 
