--- a/HW1123/06_陳嘉祥/CH09.04_Q08.md
+++ b/HW1123/06_陳嘉祥/CH09.04_Q08.md
@@ -33,6 +33,6 @@ $$H_a$$ : P > 0.5 (右尾檢定)
 
 P-Value = P( Z > 2.68 )，查表得到 : P( Z > 2.68 ) = 0.0037 < $$\alpha=0.05 $$。 
 
-因為P-Value落入Rejection Region，故拒絕 $$H_{0} $$ 。    
+因為P-Value < $$\alpha $$，故拒絕 $$H_{0} $$ 。    
 
 可以，使用P-Value檢定可得出與Z檢定相同的結果。 
