--- a/HW1123/13_陳峻毅/CH09.02_Q25.md
+++ b/HW1123/13_陳峻毅/CH09.02_Q25.md
@@ -3,11 +3,11 @@
 # 解答：題目 25
 
 ## 已知數據
-- 母體平均值假設：\( \mu_0 = 80\% \)
-- 樣本平均值：\( \bar{x} = 79.7\% \)
-- 樣本標準差：\( s = 0.8\% \)
-- 樣本數量：\( n = 100 \)
-- 顯著水準：\( \alpha = 0.05 \)
+- 母體平均值假設： $\mu_0 = 80\%$
+- 樣本平均值： $\bar{x} = 79.7\%$ 
+- 樣本標準差：s = 0.8%
+- 樣本數量：n = 100 
+- 顯著水準： $\alpha = 0.05$
 
 ---
 
