--- a/HW1123/06_陳嘉祥/CH09.04_Q09.md
+++ b/HW1123/06_陳嘉祥/CH09.04_Q09.md
@@ -32,7 +32,7 @@ Z = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.15 - 0.2}{\s
 
 P-Value = P( Z < -1.77 )，查表得到 : P( Z < -1.77 ) = 0.0384 < $$\alpha=0.05 $$。
 
-因為P-Value落入Rejection Region，故拒絕 $$H_{0} $$ 。   
+因為P-Value < $$\alpha $$，故拒絕 $$H_{0} $$ 。   
 
 使用P-Value檢定，得出與Z檢定相同的結果，故不會改變c小題的結論。
 
