--- a/HW1123/04_林佑娟/CH09.02_Q11-13.md
+++ b/HW1123/04_林佑娟/CH09.02_Q11-13.md
@@ -2,4 +2,6 @@
 
 <img width="318" alt="截圖 2024-12-07 上午10 09 50" src="https://github.com/user-attachments/assets/c4a63720-f13f-47d5-85ad-b1aba16e390e">
 
-![Uploading IMG_7739.JPG…]()
+![IMG_7741](https://github.com/user-attachments/assets/3d01adb0-5f02-4363-8817-0530e1da79e6)
+
+
