--- a/HW1123/06_陳嘉祥/CH09.04_Q04-06.md
+++ b/HW1123/06_陳嘉祥/CH09.04_Q04-06.md
@@ -50,5 +50,5 @@ Z = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.6 - 0.5}{\sq
 
 P-Value = P( Z > 2.19 )，查表得到 : P( Z > 2.19 ) = 0.0143 < $$\alpha=0.05 $$。
 
-因為P-Value落入Rejection Region，故拒絕 $$H_{0} $$ 。   
+因為P-Value < $$\alpha $$，故拒絕 $$H_{0} $$ 。   
 
