--- a/HW1123/HW1123Q11.md
+++ b/HW1123/HW1123Q11.md
@@ -3,7 +3,7 @@
 ![image](https://github.com/user-attachments/assets/a56aa696-8296-4fa5-aa2b-923a7463f8ee)
 
 在那些被診斷為早期乳腺癌的女性中，其中有三分之一最終會死於該病。也就是說，存活率是 p =66.67%
-假設一項乳腺癌早期檢測計劃已啟動，目的是提高被診斷為該病的女性的生存率 p。從進行了篩查的200名被診斷為乳腺癌的女性中，隨機抽取了一個樣本，### 記錄了有多少人最終存活下來，設 x 為樣本中存活的女性數量。
+假設一項乳腺癌早期檢測計劃已啟動，目的是提高被診斷為該病的女性的生存率 p。從進行了篩查的200名被診斷為乳腺癌的女性中，隨機抽取了一個樣本，記錄了有多少人最終存活下來，設 x 為樣本中存活的女性數量。
 
 ##### a. 如果希望判斷篩查計劃是否有效，應檢驗的對立假設是什麼？
 
