--- a/HW1123/10_蔡佳媛/CH09.04_Q08_10_Cathy.md
+++ b/HW1123/10_蔡佳媛/CH09.04_Q08_10_Cathy.md
@@ -10,8 +10,8 @@ $\alpha$ = 0.05
 
 ### a. Whether more than 50% of Americans would not ride in a driverless car.
 
-$H_{0}$: $p \gt$ 0.5  
-$H_{a}$: $p \leq$ 0.5  
+$H_{0}$: $p \leq$ 0.5  
+$H_{a}$: $p \gt$ 0.5  
 
 Test statistic: z $\approx \frac{\hat{p}-p_{0}}{\sqrt{\frac{p_{0}q_{0}}{n}}}$ = $\frac{0.5-0.56}{\sqrt{\frac{0.5 \times 0.5}{500}}}$ = -2.683282 $\approx$ -2.68
 
