--- a/HW1123/10_蔡佳媛/CH09.04_Q09_10_Cathy.md
+++ b/HW1123/10_蔡佳媛/CH09.04_Q09_10_Cathy.md
@@ -6,8 +6,8 @@ n = 200, 30 of small businesses were recorded as failed
 
 ### a. If we wish to test the claim that the new tax laws help small businesses survive, how would we express $H_{0}$ and $H_{a}$?
 
-$H_{0}$: $p \lt$ 0.2  
-$H_{a}$: $p \geq$ 0.2  
+$H_{0}$: $p \geq$ 0.2  
+$H_{a}$: $p \lt$ 0.2  
 
 ### b. Find the value of the test statistic based on $\hat{p}$, the sample proportion of failed small businesses.
 
