--- a/HW1123/02_顏子軒/CH09.02_Q08-10.md
+++ b/HW1123/02_顏子軒/CH09.02_Q08-10.md
@@ -6,11 +6,11 @@ z=-2.41 查表得 P = 0.08
 
 Q8 . 左尾檢定，顯著水準 α=0.01 ，**P = 0.08 < α=0.01 → Reject H0 
 
-在該顯著水準下拒絕該虛無假說，表示母體具備顯著性差異的可能性為99%，僅會有1%的機會無顯著性差異，推斷H1為真機率很高。
+在該顯著水準下拒絕該虛無假說。
 
 Q9 . 左尾檢定，顯著水準 α=0.05 ，*P = 0.08 > α=0.05 → Reject H0 
 
-在該顯著水準下拒絕該虛無假說，表示母體具備顯著性差異的可能性為95%，僅會有5%的機會無顯著性差異，推斷H1為真機率很高。
+在該顯著水準下拒絕該虛無假說。
 
 ![image](https://github.com/user-attachments/assets/c9bf9f34-b7cf-4c51-aca1-82cce97dd777)
 
