--- a/HW1123/13_陳峻毅/CH09.02_Q08-10.md
+++ b/HW1123/13_陳峻毅/CH09.02_Q08-10.md
@@ -11,7 +11,7 @@
         比較：p=0.0080<α=0.01
 
     結論：
-        由於 p-value 小於顯著水準 α，我們有足夠的證據拒絕虛無假設 H0​。
+        由於 p-value 小於顯著水準 α，因此拒絕虛無假設 H0​。
         解釋：結果具有統計顯著性，表示觀測結果顯著偏向於左尾。
 
 題目 9：左尾檢定，α=0.05
