--- a/HW1123/HW1123Q04.md
+++ b/HW1123/HW1123Q04.md
@@ -55,4 +55,4 @@ $Z_{STAT}$ ≈ -2.71 < -1.645
 b. 
 p-value約為0.0034，小於5%的顯著水準。
 
-綜合以上顯著證據（significant evidence）皆拒絕H₀，因此該診所3個月大女baby的平均體重低於5.86公斤。
+綜合以上顯著證據（significant evidence）皆拒絕H₀，因此該診所3個月大女baby的平均體重可能低於5.86公斤。
