--- a/HW1123/13_陳峻毅/CH09.02_Q08-10.md
+++ b/HW1123/13_陳峻毅/CH09.02_Q08-10.md
@@ -23,8 +23,8 @@
         比較：p=0.0080 < α=0.05
 
     結論：
-        由於 p-value 小於顯著水準 α，我們拒絕虛無假設 H0.
-        解釋：結果同樣具有統計顯著性，且證據更強，因為 p 更小。
+        由於 p-value 小於顯著水準 α，因此拒絕虛無假設 H0.
+        解釋：結果同樣具有統計顯著性，因為 p 更小。
 
 題目 10：雙尾檢定，α=0.02
 
