--- a/HW1123/HW1123Q09.md
+++ b/HW1123/HW1123Q09.md
@@ -35,7 +35,7 @@ $$
 ## (d) 計算 $p-value$ 與結論
 
    - 查標準常態分布表可得，當 $z = -1.77$ 時，P(z < -1.77) = 0.0384。
-   - p-value <  $\alpha = 0.05$ ，拒絕 Ho
+   - p-value <  $\alpha (0.05)$ ，拒絕 Ho
    - 在significance level 顯著水準 $\alpha = 0.05$ 下，拒絕 Ho假設。
 
 
