--- a/HW1123/HW1123Q11.md
+++ b/HW1123/HW1123Q11.md
@@ -2,7 +2,7 @@
 
 ![image](https://github.com/user-attachments/assets/a56aa696-8296-4fa5-aa2b-923a7463f8ee)
 
-在那些被診斷為早期乳腺癌的女性中，其中有三分之一最終會死於該病。也就是說，存活率是 p =66.67%
+在那些被診斷為早期乳腺癌的女性中，其中有三分之一最終會死於該病。
 假設一項乳腺癌早期檢測計劃已啟動，目的是提高被診斷為該病的女性的生存率 p。從進行了篩查的200名被診斷為乳腺癌的女性中，隨機抽取了一個樣本，記錄了有多少人最終存活下來，設 x 為樣本中存活的女性數量。
 
 ##### a. 如果希望判斷篩查計劃是否有效，應檢驗的對立假設是什麼？
@@ -16,12 +16,12 @@
 答案:
 
 a. 
-對立假設檢測計畫的目的是提升存活率，在這裡，我們希望證明計畫有效，也就是存活率 p 比原來的 66.67%更高：
+對立假設檢測計畫的目的是提升生存率：
 
 #### $H_a$: P> $\frac{2}{3}$=0.6667
 
 b. 
-虛無假設是檢測計畫對存活率無影響，假設「計畫沒有效果」，也就是存活率沒有改變，仍然是 66.67%
+虛無假設是檢測計畫對生存率無影響，假設「計畫沒有效果」
 
 #### $H_0$: P = $\frac{2}{3}$=0.6667
 
@@ -36,7 +36,7 @@ o	樣本存活數 x=164
 
 o	樣本存活率 $\hat{p} = \frac{x}{n} = \frac{164}{200} = 0.82$
 
-o	原假設效果下的存活率 $P_0$= 0.6667
+o	原假設效果下的生存率 $P_0$= 0.6667
 
 $H_0$ : P = $\frac{2}{3}$
    
