--- a/HW1123/HW1123Q01.md
+++ b/HW1123/HW1123Q01.md
@@ -13,7 +13,7 @@ Q8 . 左尾檢定，顯著水準 α=0.01 ，***P = 0.008 < α=0.01 → Reject H0
 
  
 
-在該顯著水準下拒絕該虛無假說，表示母體具備顯著性差異的可能性為99%，僅會有1%的機會無顯著性差異，推斷H1為真機率很高。
+在該顯著水準下拒絕該虛無假說。
 
  
 
@@ -24,7 +24,7 @@ Q8 . 左尾檢定，顯著水準 α=0.01 ，***P = 0.008 < α=0.01 → Reject H0
 Q9 . 左尾檢定，顯著水準 α=0.05 ，**P = 0.008 > α=0.05 → Reject H0
 
 
-在該顯著水準下拒絕該虛無假說，表示母體具備顯著性差異的可能性為95%，僅會有5%的機會無顯著性差異，推斷H1為真機率高。
+在該顯著水準下拒絕該虛無假說。
 
  
 
