--- a/HW1123/HW1123Q11.md
+++ b/HW1123/HW1123Q11.md
@@ -100,9 +100,9 @@ P(Z≤4.60)≈0.999997
 
 p-value=1−0.999997=0.000003  
 
-p 值 ≈0.000003 是一個極小的值，表明如果檢測計畫對存活率沒有影響( $H_0$成立)，觀察到樣本存活率 82% 或更高的概率幾乎為零。
+p 值 ≈0.000003 是一個極小的值，表明如果檢測計畫對生存率沒有影響( $H_0$成立)，觀察到樣本生存率 82% 或更高的概率幾乎為零。
 
-因此，我們有非常強的證據拒絕 $H_0$，並認為檢測計畫有效，提高了存活率。
+因此，我們有非常強的證據拒絕 $H_0$，並認為檢測計畫有效，提高了生存率。
 
 
 
