--- a/HW1123/13_陳峻毅/CH09.02_Q08-10.md
+++ b/HW1123/13_陳峻毅/CH09.02_Q08-10.md
@@ -11,7 +11,7 @@
         比較：p=0.0080<α=0.01
 
     結論：
-        由於 p-value 小於顯著水準 α，因此拒絕虛無假設 H0​。
+        由於 p-value 小於顯著水準 α，因此拒絕虛無假設  Ho。
         解釋：結果具有統計顯著性，表示觀測結果顯著偏向於左尾。
 
 題目 9：左尾檢定，α=0.05
@@ -23,7 +23,7 @@
         比較：p=0.0080 < α=0.05
 
     結論：
-        由於 p-value 小於顯著水準 α，因此拒絕虛無假設 H0.
+        由於 p-value 小於顯著水準 α，因此拒絕虛無假設 Ho.
         解釋：結果同樣具有統計顯著性，因為 p 更小。
 
 題目 10：雙尾檢定，α=0.02
@@ -41,7 +41,7 @@
         比較：p=0.0080< α 單尾=0.01。
 
     結論：
-        由於 p-value 小於雙尾檢定單尾部分的顯著水準 α/2，我們拒絕虛無假設 H0。
+        由於 p-value 小於雙尾檢定單尾部分的顯著水準 α/2，我們拒絕虛無假設 Ho。
         解釋：結果具有統計顯著性，表示觀測值偏離零點（更靠近左尾）。
 
   PS: 
@@ -52,7 +52,7 @@
         雙尾檢定需要將 α平分到兩尾，因此比較的是 p-value 與 α/2。
 
     結論的邏輯：
-        當 p<α 時，代表觀測結果非常不可能在虛無假設成立的情況下出現，故我們有理由拒絕 H0。
+        當 p<α 時，代表觀測結果非常不可能在虛無假設成立的情況下出現，故我們有理由拒絕 Ho。
 
     可靠性測度：
-        p-value 本身是一種對結果可靠性的度量。較小的 p-value 表明我們對拒絕 H0 的結論更有信心。
+        p-value 本身是一種對結果可靠性的度量。較小的 p-value 表明我們對拒絕 Ho 的結論更有信心。
