--- a/HW1123/02_顏子軒/CH09.02_Q08-10.md
+++ b/HW1123/02_顏子軒/CH09.02_Q08-10.md
@@ -1,16 +1,29 @@
-![image](https://github.com/user-attachments/assets/926aac00-e639-4a93-8f0e-c1497a79630e)
+![image](https://github.com/user-attachments/assets/488850c4-f2e1-439f-bb18-fe59d58ec5e7)
 
-z=-2.41 查表得 P = 0.08
-![image](https://github.com/user-attachments/assets/220920cf-a8f8-4cf8-8485-7b9e842a3f88)
+## Find the appropriate rejection regions and state your conclusion if z = -2.41
 
+![image](https://github.com/user-attachments/assets/d1dfcf58-a7b6-4167-bf2b-e67fff104c8e)
 
-Q8 . 左尾檢定，顯著水準 α=0.01 ，**P = 0.08 < α=0.01 → Reject H0 
+### 8. A left-tailed test with $\alpha = 0.01$
 
-在該顯著水準下拒絕該虛無假說。
+$z_{-0.01} = -2.33$
 
-Q9 . 左尾檢定，顯著水準 α=0.05 ，*P = 0.08 > α=0.05 → Reject H0 
+Compare the observed value of the test statistic, z = -2.41, with the critical value necessary for rejection, $z_{-0.01} = -2.33$.  
+Since the observed value of the test statistic falls in the rejection region (z = -2.41 is less than -2.33), reject $H_{0}$.  
+The probability of making an incorrect decision is $\alpha = 0.01$  
 
-在該顯著水準下拒絕該虛無假說。
+### 9. A left-tailed test with $\alpha = 0.05$
 
-![image](https://github.com/user-attachments/assets/c9bf9f34-b7cf-4c51-aca1-82cce97dd777)
+$z_{-0.05} = -1.645$
 
+Compare the observed value of the test statistic, z = -2.41, with the critical value necessary for rejection, $z_{-0.05} = -1.645$.  
+Since the observed value of the test statistic falls in the rejection region (z = -2.41 is less than -1.645), reject $H_{0}$.  
+The probability of making an incorrect decision is $\alpha = 0.05$  
+
+### 10. A two-tailed test with $\alpha = 0.02$
+
+$z_{\frac{0.02}{2}} = 2.33$, so the critical values are -2.33 and 2.33  
+
+Compare the observed value of the test statistic, z = -2.41, with the critical value necessary for rejection, $z_{-0.01} = -2.33$.  
+Since the observed value of the test statistic falls in the rejection region (z = -2.41 is less than -2.33), reject $H_{0}$.  
+The probability of making an incorrect decision is $\alpha = 0.02$  
